tests/api/reference/negative/13-json-float.asm
const invalid = json.parse("{\"value\":1.5}")
